--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "gatsby-remark-embed-video": "^3.0.10",
+    "gh-pages": "^3.1.0",
     "prettier": "2.2.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
